feat: implement core navigation, initial screens (Home, Send, Receive, Sharing, History), and foundational utilities for Wi-Fi P2P and file transfer.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,6 +114,13 @@ dependencies {
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
-        implementation jscFlavor
+        implementation project(':react-native-vector-icons')
+    implementation jscFlavor
     }
 }
+
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'MaterialCommunityIcons.ttf', 'Ionicons.ttf', 'Feather.ttf' ]
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
