--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "buffer": "^6.0.3",
     "react": "18.3.1",
-    "react-native": "0.76.0"
+    "react-native": "0.76.0",
+    "react-native-contacts": "^8.0.7",
+    "react-native-device-info": "^15.0.1",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^5.4.4",
+    "react-native-qrcode-svg": "^6.3.21",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-tcp-socket": "^6.3.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-vision-camera": "^4.7.3",
+    "react-native-wifi-p2p": "^3.6.1",
+    "react-native-wifi-reborn": "^4.13.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,6 +45,7 @@
     "@react-native/metro-config": "0.76.0",
     "@react-native/typescript-config": "0.76.0",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
