--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "^4.7.3",
     "react-native-wifi-p2p": "^3.6.1",
-    "react-native-wifi-reborn": "^4.13.6"
+    "react-native-wifi-reborn": "^4.13.6",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
