--- a/ios/FlashDrop/Info.plist
+++ b/ios/FlashDrop/Info.plist
@@ -31,23 +31,25 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>FlashDrop needs location access to discover nearby devices.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>FlashDrop needs camera access to scan QR codes for quick connection.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>FlashDrop needs access to your photo library to share photos and videos.</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>FlashDrop needs access to save received photos and videos to your library.</string>
-	<key>NSContactsUsageDescription</key>
-	<string>FlashDrop needs access to your contacts to share them with other devices.</string>
-	<key>NSLocalNetworkUsageDescription</key>
-	<string>FlashDrop uses the local network to discover and transfer files between devices.</string>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_http._tcp.</string>
 		<string>_flashdrop._tcp.</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>FlashDrop needs camera access to scan QR codes for quick connection.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>FlashDrop needs access to your contacts to share them with other devices.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>FlashDrop uses the local network to discover and transfer files between devices.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>FlashDrop needs location access to discover nearby devices.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>FlashDrop needs access to save received photos and videos to your library.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>FlashDrop needs access to your photo library to share photos and videos.</string>
+	<key>RCTNewArchEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
