feat: Revamp HomeScreen UI with animations and dashboard cards, introduce new transfer components, and refactor core transfer/discovery logic.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
   "name": "FlashDrop",
-  "displayName": "FlashDrop"
+  "displayName": "Flash-Drop",
+  "version": "1.0.0",
+  "description": "Lightning fast file sharing for Android/PC",
+  "author": "Flash-Drop Team"
 }
