--- a/ios/FlashDrop/Info.plist
+++ b/ios/FlashDrop/Info.plist
@@ -44,12 +44,19 @@
 	<string>FlashDrop uses the local network to discover and transfer files between devices.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>FlashDrop needs location access to discover nearby devices.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>FlashDrop needs microphone access for voice notes or video calls.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>FlashDrop needs access to save received photos and videos to your library.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>FlashDrop needs access to your photo library to share photos and videos.</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FontAwesome.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
