--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <!-- Required for Personalized Ads on Android 13+ -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
     
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.wifi.direct" />
