--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-device-info": "^15.0.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
+    "react-native-google-mobile-ads": "^16.0.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.4",
     "react-native-qrcode-svg": "^6.3.21",
